[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batch-probe"
version = "0.2.0"
description = "Find the maximum batch size that fits in GPU memory. Binary search with OOM recovery."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Andrew H. Bond"},
]
keywords = ["pytorch", "gpu", "memory", "batch-size", "oom", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "torch>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.urls]
"Homepage" = "https://github.com/ahb-sjsu/batch-probe"
"Bug Tracker" = "https://github.com/ahb-sjsu/batch-probe/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
