[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batch-probe"
version = "0.4.0"
description = "GPU memory probing and thermal-aware CPU thread control. Works with PyTorch, CuPy, JAX, or any GPU framework."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Andrew H. Bond"},
]
keywords = ["pytorch", "cupy", "jax", "gpu", "memory", "batch-size", "oom", "cuda", "thermal", "threads"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["numpy>=1.22.0"]

[project.optional-dependencies]
torch = ["torch>=1.13.0"]
cupy = ["cupy-cuda12x"]
all = ["torch>=1.13.0", "cupy-cuda12x"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "torch>=1.13.0",
    "numpy>=1.22.0",
]

[project.urls]
"Homepage" = "https://github.com/ahb-sjsu/batch-probe"
"Bug Tracker" = "https://github.com/ahb-sjsu/batch-probe/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
